# MusicHubDRF

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
MusicHub/: urls.py
MusicHub/codes/: admin.py  constants.py  helpers.py  models.py  serializers.py
MusicHub/codes/migrations/: 0001_initial.py  0002_alter_signupcode_code.py
MusicHub/config/: development.py  production.py  settings.py
MusicHub/emailProvider/: service.py
MusicHub/main/: constants.py  metaModel.py  utils.py  validators.py
MusicHub/playlists/: serializers.py  views.py
MusicHub/playlists/migrations/: 0001_initial.py
MusicHub/tracks/: models.py  serializers.py  track_service.py  urls.py  validators.py  views.py
MusicHub/tracks/migrations/: 0001_initial.py  0003_alter_track_created_by_alter_track_file.py
MusicHub/users/: admin.py  models.py  serializers.py  urls.py  user_service.py  validators.py
MusicHub/users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_user_is_verified.py
MusicHub/users/test/: conftest.py  test_profile_view.py  test_recover_password.py  test_signup.py  user_factory.py
MusicHub/users/views/: profile_view.py  views.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.js  main.tsx
ui/src/components/: CustomButton.js  GoogleSign.js  Header.js  InputText.js  LogIn.js
ui/src/css/: App.css  style.css
ui/src/pages/: Register.js
